--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -95,35 +95,26 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-            <View
-                android:layout_width="0dp"
+            <Button
+                android:id="@+id/btnConnect"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.25" />
+                android:drawableLeft="@mipmap/windy"
+                android:onClick="connect"
+                android:text="Connect" />
 
-            <LinearLayout
-                android:layout_width="0dp"
+            <Button
+                android:id="@+id/btnCommand1"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.75"
-                android:orientation="horizontal">
+                android:drawableLeft="@mipmap/computer_dark"
+                android:enabled="false"
+                android:onClick="cmdTurnOffDisplay"
+                android:text="Turn Off Display" />
 
-
-                <Button
-                    android:id="@+id/btnConnect"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:onClick="connect"
-                    android:text="Connect" />
-
-                <Button
-                    android:id="@+id/btnCommand1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:enabled="false"
-                    android:onClick="cmdTurnOffDisplay"
-                    android:text="Turn Off Display" />
-            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
